Fix z-index rule

--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -269,7 +269,7 @@
   }
 
   .highlight-bar {
-    z-index: 4;
+    z-index: 4 !important;
 
     p {
       margin-bottom: 0;
